fix: EC2 메타데이터 SSRF 우회 방지 및 index.html 수정