@@ -5,6 +5,7 @@ import org.springframework.stereotype.Service;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 @Service
@@ -12,13 +13,15 @@ public class HttpService {
 
     public String fetchUrl(String targetUrl) {
         try {
-            // [CTF 목적] 단순 문자열 기반 필터링 (우회 유도용)
-            if (targetUrl.contains("169.254.169.254")) {
+            URI uri = new URI(targetUrl);
+            String host = uri.getHost();
+
+            // [CTF용 필터] 정확히 "169.254.169.254"인 경우만 차단
+            if ("169.254.169.254".equals(host)) {
                 return "요청 실패: EC2 메타데이터 접근은 허용되지 않습니다.";
             }
 
-            // 외부 URL 요청
-            URL url = new URL(targetUrl);
+            URL url = uri.toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setConnectTimeout(2000);
             conn.setReadTimeout(2000);
